--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "knex": "^2.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.2"
   },
