--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "multer": "^1.4.5-lts.1",
     "pm2": "^5.2.2",
     "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
